<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_Deformation" Id="{2bc95611-e142-484d-b65f-d925e44f5383}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
  nC_GridPitch_X  : UDINT := 1024;    // distance between grid point in y [px] (FPGA definition)
  nC_GridPitch_Y  : UDINT := 1024;    // distance between grid point in y [px] (FPGA definition)
  nC_GridRoiRows  : UINT  := 4;       // number of roi rows per head (FPGA definition)
  nC_GridRoiCols  : UINT  := 62;      // number of roi columns per head (FPGA definition)
  nC_GridSubReso  : UDINT := 10;      // sub resolution of grid definitions (script handling)
  bC_UseGlobalGridShift : BOOL := FALSE; // not yet tested!!! 
  bC_UsePUDeformation : BOOL := TRUE;   // enable calculation of PU deformation/correction
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>